begin;

create or replace function public.set_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at = now();
  return new;
end;
$$;

create table if not exists public.branches (
  id integer generated by default as identity primary key,
  code text not null unique,
  name text not null unique,
  manager_name text,
  contact_number text,
  address text,
  opening_date date,
  status text not null default 'active' check (status in ('active', 'inactive')),
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

alter table public.branches
  add column if not exists manager_name text,
  add column if not exists contact_number text,
  add column if not exists address text,
  add column if not exists opening_date date,
  add column if not exists status text not null default 'active',
  add column if not exists created_at timestamptz not null default now(),
  add column if not exists updated_at timestamptz not null default now();

insert into public.branches (
  id,
  code,
  name,
  manager_name,
  contact_number,
  address,
  opening_date,
  status
)
values
  (1, 'MAIN', 'Sta. Lucia', null, null, null, null, 'active'),
  (2, 'DOLLAR', 'Dollar', null, null, null, null, 'active')
on conflict (id) do update
set
  code = excluded.code,
  name = excluded.name,
  manager_name = excluded.manager_name,
  contact_number = excluded.contact_number,
  address = excluded.address,
  opening_date = excluded.opening_date,
  status = excluded.status,
  updated_at = now();

select setval(
  pg_get_serial_sequence('public.branches', 'id'),
  greatest((select coalesce(max(id), 1) from public.branches), 1),
  true
);

do $$
declare
  legacy_products_exists boolean;
  legacy_sale_items_exists boolean;
begin
  select exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'products'
      and column_name = 'category'
  )
  and exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'products'
      and column_name = 'product_name'
  )
  and not exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'products'
      and column_name = 'category_id'
  )
  into legacy_products_exists;

  if legacy_products_exists then
    if to_regclass('public.products_legacy') is null then
      alter table public.products rename to products_legacy;
    else
      raise exception 'Legacy migration halted: public.products still has the old schema, but public.products_legacy already exists. Review the tables manually before rerunning this script.';
    end if;
  end if;

  select exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'sale_items'
      and column_name = 'product_id'
  )
  and not exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'sale_items'
      and column_name = 'inventory_item_id'
  )
  into legacy_sale_items_exists;

  if legacy_sale_items_exists then
    if to_regclass('public.sale_items_legacy') is null then
      alter table public.sale_items rename to sale_items_legacy;
    else
      raise exception 'Legacy migration halted: public.sale_items still has the old schema, but public.sale_items_legacy already exists. Review the tables manually before rerunning this script.';
    end if;
  end if;
end
$$;

create table if not exists public.categories (
  id bigint generated by default as identity primary key,
  name text not null,
  slug text not null unique,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

alter table public.categories
  add column if not exists name text,
  add column if not exists slug text,
  add column if not exists created_at timestamptz not null default now(),
  add column if not exists updated_at timestamptz not null default now();

create unique index if not exists idx_categories_slug
  on public.categories (slug);

create unique index if not exists idx_categories_name_lower
  on public.categories ((lower(name)));

create table if not exists public.products (
  id bigint generated by default as identity primary key,
  branch text not null default 'Sta. Lucia',
  category_id bigint not null references public.categories (id) on update cascade on delete restrict,
  product_name text not null,
  unit_label text not null default '',
  default_price numeric(12, 2),
  legacy_price_text text,
  is_active boolean not null default true,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

alter table public.products
  add column if not exists branch text;

alter table public.products
  add column if not exists branch text,
  add column if not exists category_id bigint references public.categories (id) on update cascade on delete restrict,
  add column if not exists product_name text,
  add column if not exists unit_label text not null default '',
  add column if not exists default_price numeric(12, 2),
  add column if not exists legacy_price_text text,
  add column if not exists is_active boolean not null default true,
  add column if not exists created_at timestamptz not null default now(),
  add column if not exists updated_at timestamptz not null default now();

do $$
begin
  if exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'products'
      and column_name = 'branch_id'
  ) then
    update public.products
    set branch = case
      when branch_id = 2 then 'Dollar'
      else 'Sta. Lucia'
    end
    where coalesce(btrim(branch), '') = '';
  else
    update public.products
    set branch = 'Sta. Lucia'
    where coalesce(btrim(branch), '') = '';
  end if;
end
$$;

alter table public.products
  alter column branch set default 'Sta. Lucia';

alter table public.products
  drop column if exists branch_id cascade;

alter table public.products
  alter column branch set not null;

do $$
begin
  if exists (
    select 1
    from pg_constraint
    where conname = 'products_catalog_unique'
      and conrelid = 'public.products'::regclass
  ) then
    alter table public.products
      drop constraint products_catalog_unique;
  end if;

  if exists (
    select 1
    from (
      select
        branch,
        category_id,
        product_name,
        unit_label,
        count(*) as duplicate_count
      from public.products
      group by 1, 2, 3, 4
      having count(*) > 1
    ) duplicate_groups
  ) then
    create temporary table products_dedupe_map on commit drop as
    with ranked_products as (
      select
        p.id as product_id,
        min(p.id) over (
          partition by p.branch, p.category_id, p.product_name, p.unit_label
        ) as keep_product_id,
        p.branch,
        p.category_id,
        p.product_name,
        p.unit_label,
        p.default_price,
        p.legacy_price_text,
        p.is_active,
        p.created_at,
        p.updated_at
      from public.products p
    )
    select
      product_id,
      keep_product_id
    from ranked_products
    where exists (
      select 1
      from public.products duplicate_probe
      where duplicate_probe.branch = ranked_products.branch
        and duplicate_probe.category_id = ranked_products.category_id
        and duplicate_probe.product_name = ranked_products.product_name
        and duplicate_probe.unit_label = ranked_products.unit_label
      group by duplicate_probe.branch,
               duplicate_probe.category_id,
               duplicate_probe.product_name,
               duplicate_probe.unit_label
      having count(*) > 1
    );

    update public.products keep_product
    set
      default_price = product_rollup.default_price,
      legacy_price_text = product_rollup.legacy_price_text,
      is_active = product_rollup.is_active,
      created_at = product_rollup.created_at,
      updated_at = greatest(keep_product.updated_at, product_rollup.updated_at)
    from (
      select
        keep_product_id,
        max(default_price) as default_price,
        max(nullif(legacy_price_text, '')) as legacy_price_text,
        bool_or(coalesce(is_active, true)) as is_active,
        min(created_at) as created_at,
        max(updated_at) as updated_at
      from public.products product_member
      join products_dedupe_map dedupe_member
        on dedupe_member.product_id = product_member.id
      group by keep_product_id
    ) product_rollup
    where keep_product.id = product_rollup.keep_product_id;

    if to_regclass('public.inventory_items') is not null then
      create temporary table inventory_dedupe_rollup on commit drop as
      select
        coalesce(
          min(
            case
              when i.product_id = coalesce(product_dedupe.keep_product_id, i.product_id)
                then i.id
              else null
            end
          ),
          min(i.id)
        ) as keep_inventory_item_id,
        i.branch_id,
        coalesce(product_dedupe.keep_product_id, i.product_id) as keep_product_id,
        max(i.selling_price) as selling_price,
        sum(coalesce(i.stock_quantity, 0)) as stock_quantity,
        max(coalesce(i.reorder_level, 10)) as reorder_level,
        max(i.expiration_date) as expiration_date,
        max(nullif(i.legacy_stock_text, '')) as legacy_stock_text,
        max(nullif(i.notes, '')) as notes,
        bool_or(coalesce(i.is_active, true)) as is_active,
        min(i.created_at) as created_at,
        max(i.updated_at) as updated_at
      from public.inventory_items i
      left join products_dedupe_map product_dedupe
        on product_dedupe.product_id = i.product_id
      group by
        i.branch_id,
        coalesce(product_dedupe.keep_product_id, i.product_id);

      create temporary table inventory_dedupe_map on commit drop as
      select
        i.id as inventory_item_id,
        inventory_rollup.keep_inventory_item_id
      from public.inventory_items i
      left join products_dedupe_map product_dedupe
        on product_dedupe.product_id = i.product_id
      join inventory_dedupe_rollup inventory_rollup
        on inventory_rollup.branch_id = i.branch_id
       and inventory_rollup.keep_product_id = coalesce(product_dedupe.keep_product_id, i.product_id)
      where i.id <> inventory_rollup.keep_inventory_item_id;

      update public.inventory_items keep_inventory
      set
        product_id = inventory_rollup.keep_product_id,
        selling_price = inventory_rollup.selling_price,
        stock_quantity = inventory_rollup.stock_quantity,
        reorder_level = inventory_rollup.reorder_level,
        expiration_date = inventory_rollup.expiration_date,
        legacy_stock_text = inventory_rollup.legacy_stock_text,
        notes = inventory_rollup.notes,
        is_active = inventory_rollup.is_active,
        created_at = inventory_rollup.created_at,
        updated_at = greatest(keep_inventory.updated_at, inventory_rollup.updated_at)
      from inventory_dedupe_rollup inventory_rollup
      where keep_inventory.id = inventory_rollup.keep_inventory_item_id;

      if to_regclass('public.sale_items') is not null then
        update public.sale_items sale_item
        set inventory_item_id = inventory_dedupe.keep_inventory_item_id
        from inventory_dedupe_map inventory_dedupe
        where sale_item.inventory_item_id = inventory_dedupe.inventory_item_id;
      end if;

      delete from public.inventory_items inventory_item
      using inventory_dedupe_map inventory_dedupe
      where inventory_item.id = inventory_dedupe.inventory_item_id;
    end if;

    if to_regclass('public.sale_items') is not null then
      update public.sale_items sale_item
      set product_id = product_dedupe.keep_product_id
      from products_dedupe_map product_dedupe
      where sale_item.product_id = product_dedupe.product_id
        and sale_item.product_id <> product_dedupe.keep_product_id;
    end if;

    delete from public.products duplicate_product
    using products_dedupe_map product_dedupe
    where duplicate_product.id = product_dedupe.product_id
      and duplicate_product.id <> product_dedupe.keep_product_id;
  end if;

  if not exists (
    select 1
    from pg_constraint
    where conname = 'products_catalog_unique'
      and conrelid = 'public.products'::regclass
  ) then
    alter table public.products
      add constraint products_catalog_unique
      unique (branch, category_id, product_name, unit_label);
  end if;
end
$$;

create index if not exists idx_products_branch
  on public.products (branch);

create index if not exists idx_products_category_id
  on public.products (category_id);

create index if not exists idx_products_product_name
  on public.products (product_name);

create table if not exists public.inventory_items (
  id bigint generated by default as identity primary key,
  branch_id integer not null references public.branches (id) on update cascade on delete restrict,
  product_id bigint not null references public.products (id) on update cascade on delete restrict,
  selling_price numeric(12, 2),
  stock_quantity integer not null default 0,
  reorder_level integer not null default 10,
  expiration_date date,
  legacy_stock_text text,
  notes text,
  is_active boolean not null default true,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

alter table public.inventory_items
  add column if not exists branch_id integer references public.branches (id) on update cascade on delete restrict,
  add column if not exists product_id bigint references public.products (id) on update cascade on delete restrict,
  add column if not exists selling_price numeric(12, 2),
  add column if not exists stock_quantity integer not null default 0,
  add column if not exists reorder_level integer not null default 10,
  add column if not exists expiration_date date,
  add column if not exists legacy_stock_text text,
  add column if not exists notes text,
  add column if not exists is_active boolean not null default true,
  add column if not exists created_at timestamptz not null default now(),
  add column if not exists updated_at timestamptz not null default now();

do $$
begin
  if not exists (
    select 1
    from pg_constraint
    where conname = 'inventory_items_branch_product_unique'
      and conrelid = 'public.inventory_items'::regclass
  ) then
    alter table public.inventory_items
      add constraint inventory_items_branch_product_unique
      unique (branch_id, product_id);
  end if;
end
$$;

create index if not exists idx_inventory_items_branch_id
  on public.inventory_items (branch_id);

create index if not exists idx_inventory_items_product_id
  on public.inventory_items (product_id);

create index if not exists idx_inventory_items_expiration_date
  on public.inventory_items (expiration_date);

create table if not exists public.sales (
  id bigint generated by default as identity primary key,
  cashier_id text not null,
  cashier_name text,
  branch_id integer references public.branches (id) on update cascade on delete set null,
  branch_name text,
  payment_method text not null default 'cash',
  subtotal numeric(12, 2) not null default 0,
  discount numeric(12, 2) not null default 0,
  total_amount numeric(12, 2) not null default 0,
  cash_received numeric(12, 2) not null default 0,
  change_amount numeric(12, 2) not null default 0,
  notes text,
  submitted_at timestamptz not null default now(),
  created_at timestamptz not null default now()
);

alter table public.sales
  add column if not exists cashier_name text,
  add column if not exists branch_id integer references public.branches (id) on update cascade on delete set null,
  add column if not exists branch_name text,
  add column if not exists payment_method text not null default 'cash',
  add column if not exists subtotal numeric(12, 2) not null default 0,
  add column if not exists discount numeric(12, 2) not null default 0,
  add column if not exists total_amount numeric(12, 2) not null default 0,
  add column if not exists cash_received numeric(12, 2) not null default 0,
  add column if not exists change_amount numeric(12, 2) not null default 0,
  add column if not exists notes text,
  add column if not exists submitted_at timestamptz not null default now(),
  add column if not exists created_at timestamptz not null default now();

create index if not exists idx_sales_cashier_id
  on public.sales (cashier_id);

create index if not exists idx_sales_branch_id
  on public.sales (branch_id);

create index if not exists idx_sales_submitted_at
  on public.sales (submitted_at desc);

create table if not exists public.sale_items (
  id bigint generated by default as identity primary key,
  sale_id bigint not null references public.sales (id) on delete cascade,
  product_id bigint references public.products (id) on update cascade on delete set null,
  inventory_item_id bigint references public.inventory_items (id) on update cascade on delete set null,
  item_name text not null,
  quantity integer not null check (quantity > 0),
  unit_price numeric(12, 2) not null default 0,
  line_total numeric(12, 2) not null default 0,
  created_at timestamptz not null default now()
);

create index if not exists idx_sale_items_sale_id
  on public.sale_items (sale_id);

create index if not exists idx_sale_items_product_id
  on public.sale_items (product_id);

create index if not exists idx_sale_items_inventory_item_id
  on public.sale_items (inventory_item_id);

do $$
begin
  if not exists (
    select 1 from pg_trigger where tgname = 'set_branches_updated_at'
  ) then
    create trigger set_branches_updated_at
      before update on public.branches
      for each row
      execute function public.set_updated_at();
  end if;

  if not exists (
    select 1 from pg_trigger where tgname = 'set_categories_updated_at'
  ) then
    create trigger set_categories_updated_at
      before update on public.categories
      for each row
      execute function public.set_updated_at();
  end if;

  if not exists (
    select 1 from pg_trigger where tgname = 'set_products_updated_at'
  ) then
    create trigger set_products_updated_at
      before update on public.products
      for each row
      execute function public.set_updated_at();
  end if;

  if not exists (
    select 1 from pg_trigger where tgname = 'set_inventory_items_updated_at'
  ) then
    create trigger set_inventory_items_updated_at
      before update on public.inventory_items
      for each row
      execute function public.set_updated_at();
  end if;
end
$$;

alter table public.products
  add column if not exists branch text;

do $$
begin
  if exists (
    select 1
    from information_schema.columns
    where table_schema = 'public'
      and table_name = 'products'
      and column_name = 'branch_id'
  ) then
    update public.products
    set branch = case
      when branch_id = 2 then 'Dollar'
      else 'Sta. Lucia'
    end
    where coalesce(btrim(branch), '') = '';
  else
    update public.products
    set branch = 'Sta. Lucia'
    where coalesce(btrim(branch), '') = '';
  end if;
end
$$;

alter table public.products
  alter column branch set default 'Sta. Lucia';

alter table public.products
  alter column branch set not null;

do $$
begin
  if to_regclass('public.products_legacy') is not null
     and not exists (select 1 from public.products limit 1)
     and not exists (select 1 from public.inventory_items limit 1) then
    insert into public.categories (name, slug, created_at, updated_at)
    select distinct
      category_clean,
      category_slug,
      now(),
      now()
    from (
      select
        case
          when btrim(coalesce(category, '')) = '' then 'Uncategorized'
          else regexp_replace(btrim(category), '\s+', ' ', 'g')
        end as category_clean,
        regexp_replace(
          lower(
            regexp_replace(
              case
                when btrim(coalesce(category, '')) = '' then 'Uncategorized'
                else regexp_replace(btrim(category), '\s+', ' ', 'g')
              end,
              '[^a-zA-Z0-9]+',
              '-',
              'g'
            )
          ),
          '(^-+|-+$)',
          '',
          'g'
        ) as category_slug
      from public.products_legacy
    ) category_seed
    on conflict (slug) do update
    set
      name = excluded.name,
      updated_at = now();

    insert into public.products (
      branch,
      category_id,
      product_name,
      unit_label,
      default_price,
      legacy_price_text,
      is_active,
      created_at,
      updated_at
    )
    with legacy_catalog as (
      select
        branch_name,
        category_clean,
        product_name_clean,
        unit_label_clean,
        max(price_numeric) as default_price,
        max(nullif(price_text, '')) as legacy_price_text,
        min(coalesce(created_at, now())) as created_at
      from (
        select
          case
            when coalesce(branch_id, 1) = 2 then 'Dollar'
            else 'Sta. Lucia'
          end as branch_name,
          case
            when btrim(coalesce(category, '')) = '' then 'Uncategorized'
            else regexp_replace(btrim(category), '\s+', ' ', 'g')
          end as category_clean,
          regexp_replace(btrim(coalesce(product_name, 'Unnamed Product')), '\s+', ' ', 'g') as product_name_clean,
          coalesce(regexp_replace(btrim(coalesce(net_weight, '')), '\s+', ' ', 'g'), '') as unit_label_clean,
          btrim(coalesce(price, '')) as price_text,
          case
            when btrim(coalesce(price, '')) ~ '^\d+(\.\d+)?$' then btrim(price)::numeric(12, 2)
            else null
          end as price_numeric,
          created_at
        from public.products_legacy
      ) normalized_rows
      group by 1, 2, 3, 4
    )
    select
      legacy_catalog.branch_name,
      c.id,
      legacy_catalog.product_name_clean,
      legacy_catalog.unit_label_clean,
      legacy_catalog.default_price,
      legacy_catalog.legacy_price_text,
      true,
      legacy_catalog.created_at,
      now()
    from legacy_catalog
    join public.categories c
      on c.name = legacy_catalog.category_clean;

    insert into public.inventory_items (
      branch_id,
      product_id,
      selling_price,
      stock_quantity,
      reorder_level,
      expiration_date,
      legacy_stock_text,
      is_active,
      created_at,
      updated_at
    )
    with legacy_inventory as (
      select
        coalesce(branch_id, 1) as branch_id,
        case
          when coalesce(branch_id, 1) = 2 then 'Dollar'
          else 'Sta. Lucia'
        end as branch_name,
        category_clean,
        product_name_clean,
        unit_label_clean,
        max(price_numeric) as selling_price,
        sum(stock_quantity_numeric) as stock_quantity,
        max(expiration_date_parsed) as expiration_date,
        max(nullif(stock_text, '')) as legacy_stock_text,
        min(coalesce(created_at, now())) as created_at
      from (
        select
          coalesce(branch_id, 1) as branch_id,
          case
            when btrim(coalesce(category, '')) = '' then 'Uncategorized'
            else regexp_replace(btrim(category), '\s+', ' ', 'g')
          end as category_clean,
          regexp_replace(btrim(coalesce(product_name, 'Unnamed Product')), '\s+', ' ', 'g') as product_name_clean,
          coalesce(regexp_replace(btrim(coalesce(net_weight, '')), '\s+', ' ', 'g'), '') as unit_label_clean,
          case
            when btrim(coalesce(price, '')) ~ '^\d+(\.\d+)?$' then btrim(price)::numeric(12, 2)
            else null
          end as price_numeric,
          btrim(coalesce(stock_quantity, '')) as stock_text,
          case
            when regexp_replace(btrim(coalesce(stock_quantity, '')), '[^0-9-]', '', 'g') ~ '^-?\d+$'
              then greatest(regexp_replace(btrim(stock_quantity), '[^0-9-]', '', 'g')::integer, 0)
            else 0
          end as stock_quantity_numeric,
          case
            when btrim(coalesce(expiration_date, '')) ~ '^\d{4}-\d{2}-\d{2}$'
              then btrim(expiration_date)::date
            else null
          end as expiration_date_parsed,
          created_at
        from public.products_legacy
      ) normalized_rows
      group by 1, 2, 3, 4, 5
    )
    select
      legacy_inventory.branch_id,
      p.id,
      coalesce(legacy_inventory.selling_price, p.default_price, 0),
      legacy_inventory.stock_quantity,
      10,
      legacy_inventory.expiration_date,
      legacy_inventory.legacy_stock_text,
      true,
      legacy_inventory.created_at,
      now()
    from legacy_inventory
    join public.categories c
      on c.name = legacy_inventory.category_clean
    join public.products p
      on p.branch = legacy_inventory.branch_name
     and p.category_id = c.id
     and p.product_name = legacy_inventory.product_name_clean
     and p.unit_label = legacy_inventory.unit_label_clean;
  end if;
end
$$;

do $$
begin
  if exists (
    select 1
    from public.products p
    where coalesce(btrim(p.branch), '') = ''
  ) and exists (
    select 1
    from public.inventory_items i
    join public.products p
      on p.id = i.product_id
    where coalesce(btrim(p.branch), '') = ''
  ) then
    insert into public.products (
      branch,
      category_id,
      product_name,
      unit_label,
      default_price,
      legacy_price_text,
      is_active,
      created_at,
      updated_at
    )
    select distinct
      case
        when i.branch_id = 2 then 'Dollar'
        else 'Sta. Lucia'
      end,
      p.category_id,
      p.product_name,
      p.unit_label,
      p.default_price,
      p.legacy_price_text,
      p.is_active,
      p.created_at,
      now()
    from public.inventory_items i
    join public.products p
      on p.id = i.product_id
    where coalesce(btrim(p.branch), '') = ''
    on conflict (branch, category_id, product_name, unit_label) do update
    set
      default_price = excluded.default_price,
      legacy_price_text = excluded.legacy_price_text,
      is_active = excluded.is_active,
      updated_at = now();

    update public.inventory_items i
    set product_id = product_map.new_product_id
    from (
      select
        i.id as inventory_item_id,
        branched_product.id as new_product_id
      from public.inventory_items i
      join public.products legacy_product
        on legacy_product.id = i.product_id
      join public.products branched_product
        on branched_product.branch = case
          when i.branch_id = 2 then 'Dollar'
          else 'Sta. Lucia'
        end
       and branched_product.category_id = legacy_product.category_id
       and branched_product.product_name = legacy_product.product_name
       and branched_product.unit_label = legacy_product.unit_label
      where coalesce(btrim(legacy_product.branch), '') = ''
    ) product_map
    where i.id = product_map.inventory_item_id
      and i.product_id <> product_map.new_product_id;

    update public.sale_items si
    set product_id = product_map.new_product_id
    from (
      select distinct
        si.id as sale_item_id,
        branched_product.id as new_product_id
      from public.sale_items si
      left join public.inventory_items i
        on i.id = si.inventory_item_id
      left join public.sales s
        on s.id = si.sale_id
      join public.products legacy_product
        on legacy_product.id = si.product_id
      join public.products branched_product
        on branched_product.branch = case
          when coalesce(i.branch_id, s.branch_id) = 2 then 'Dollar'
          else 'Sta. Lucia'
        end
       and branched_product.category_id = legacy_product.category_id
       and branched_product.product_name = legacy_product.product_name
       and branched_product.unit_label = legacy_product.unit_label
      where si.product_id is not null
        and coalesce(btrim(legacy_product.branch), '') = ''
        and coalesce(i.branch_id, s.branch_id) is not null
    ) product_map
    where si.id = product_map.sale_item_id
      and si.product_id <> product_map.new_product_id;
  end if;
end
$$;

create or replace view public.product_catalog_view as
select
  p.id as product_id,
  p.branch,
  p.category_id,
  c.name as category_name,
  p.product_name,
  p.unit_label,
  p.default_price,
  p.legacy_price_text,
  p.is_active,
  p.created_at,
  p.updated_at,
  case
    when p.branch = 'Dollar' then 'DOLLAR'
    when p.branch = 'Sta. Lucia' then 'MAIN'
    else null
  end as branch_code,
  p.branch as branch_name
from public.products p
join public.categories c
  on c.id = p.category_id;

create or replace view public.inventory_catalog_view as
select
  i.id as inventory_item_id,
  i.branch_id,
  b.code as branch_code,
  b.name as branch_name,
  p.id as product_id,
  p.branch as product_branch,
  p.category_id,
  c.name as category_name,
  p.product_name,
  p.unit_label,
  coalesce(i.selling_price, p.default_price, 0) as price,
  p.default_price,
  i.selling_price,
  i.stock_quantity,
  i.reorder_level,
  i.expiration_date,
  i.legacy_stock_text,
  i.is_active,
  i.created_at,
  i.updated_at
from public.inventory_items i
join public.products p
  on p.id = i.product_id
join public.categories c
  on c.id = p.category_id
join public.branches b
  on b.id = i.branch_id;

commit;
