erDiagram
    branches {
        int id PK
        text code UK
        text name UK
        text manager_name
        text contact_number
        text address
        date opening_date
        text status
        timestamptz created_at
        timestamptz updated_at
    }

    profiles {
        uuid id PK, FK
        text username UK
        text full_name
        text role_key
        int branch_id FK
        text status
        timestamptz created_at
        timestamptz updated_at
    }

    products {
        bigint id PK
        text branch
        text category
        text product_name
        text net_weight
        numeric price
        int stock_quantity
        date expiration_date
    }

    sales {
        bigint id PK
        text cashier_id
        text cashier_name
        int branch_id FK
        text branch_name
        text payment_method
        numeric subtotal
        numeric discount
        numeric total_amount
        numeric cash_received
        numeric change_amount
        timestamptz submitted_at
    }

    sale_items {
        bigint id PK
        bigint sale_id FK
        bigint product_id FK
        text item_name
        int quantity
        numeric unit_price
        numeric line_total
    }

    branches ||--o{ profiles : "assigns"
    branches ||--o{ sales : "records"
    sales ||--|{ sale_items : "contains"
    products ||--o{ sale_items : "references"
